Fix missing images and update paths

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html, body{
 
 }
 .First{
-  /* background-color: red; */
+  background-color: red;
   height: 400px;
   /* background-color: red; */
   width: 1000px;
