--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body{
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
 }
 .text{
   color: aliceblue;
@@ -21,7 +22,7 @@ html, body{
 
 }
 .First{
-  background-color: red;
+  /* background-color: red; */
   height: 400px;
   /* background-color: red; */
   width: 1000px;
@@ -66,5 +67,3 @@ html, body{
   margin-top: 15px;
 
 }
-
-
